アセスメント完

--- a/assessment-followup/DIG-project-random-color/index.html
+++ b/assessment-followup/DIG-project-random-color/index.html
@@ -17,6 +17,32 @@
     <div class="outer">
       <button id="color-button">Change color</button>
       <div id="colorText">white</div>
+      <div class="countColors">
+        <div class="space">
+          red<div class="red">0</div>
+        </div>
+        <div class="space">
+          yellow<div class="yellow">0</div>
+        </div>
+        <div class="space">
+          blue<div class="blue">0</div>
+        </div>
+        <div class="space">
+          green<div class="green">0</div>
+        </div>
+        <div class="space">
+          white<div class="white">0</div>
+        </div>
+        <div class="space">
+          orange<div class="orange">0</div>
+        </div>
+        <div class="space">
+          purple<div class="purple">0</div>
+        </div>
+        <div class="space">
+          pink<div class="pink">0</div>
+        </div>
+      </div>
       <div class="colorBox"></div>
   </div>
   </body>
